Changes on footer

--- a/client/components/layout/navbar/navbar.css
+++ b/client/components/layout/navbar/navbar.css
@@ -1,3 +1,6 @@
+.navbar-wrapper .navbar {
+    border-radius: 0px;
+  }
 .picture{
   background-image: url(./../../../assets/images/jumbotron/nav.jpg);
 }
