--- a/client/components/layout/footer/footer.html
+++ b/client/components/layout/footer/footer.html
@@ -2,8 +2,17 @@
 
 <footer class="footer" ng-controller="FooterCtrl as footer">
   <div class="container">
-    <p>Welcome to {{footer.brand}} |
-      <a href="https://rented.co">contact us</a> |
-      <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
+
+    <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 logo">
+        <img src="assets/images/footer-logo.png" alt="">
+        <span class="copyright">&copy; 2014 Rented</span>
+      </div>
+      <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 link">
+        <a href="#">Terms and Conditions</a> | 
+        <a href="#">Privacy policy </a> | 
+        <a href="#">Contact us</a>
+      </div>
+    </div>
   </div>
 </footer>
