--- a/client/components/layout/navbar/navbar.html
+++ b/client/components/layout/navbar/navbar.html
@@ -1,26 +1,30 @@
   <div ng-controller="NavbarCtrl">
     <nav ng-class="{navbar:true, transparent: !isLoggedIn(), picture:isLoggedIn()}">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <p style="color: white"><a class="navbar-brand" href="#"><img src="../../../assets/images/rented-name-logo.png" /></a>secure off-campus housing network</p>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li ng-hide="!isLoggedIn()"> <img class="img-circle" ng-if="getCurrentUser().userImage" ng-src="/api/images{{getCurrentUser().userImage}}" style="height: 50px"/></li>
-          <li ng-hide="!isLoggedIn()"> <img class="img-circle" ng-if="!getCurrentUser().userImage" src="http://images.sodahead.com/polls/003831759/331109413_question_mark_face_answer_5_xlarge.jpeg" style="height: 50px"/></li>
-          <li ng-hide="isLoggedIn()" ui-sref-active="active"><a ui-sref="signup" class="btn btn-rented-signup">Sign up</a></li>
-          <li ng-hide="isLoggedIn()" ui-sref-active="active"><a ui-sref="login" class="btn btn-rented-signin">Login</a></li>
-          <li ng-show="isLoggedIn()"><p class="navbar-text">Hello <strong>{{getCurrentUser().firstname}}</strong></p></li>
-          <li ng-show="isLoggedIn()" ui-sref-active="active"><a ui-sref="settings"><i class="glyphicon glyphicon-cog"></i> Settings</a></li>
-          <li ng-show="isLoggedIn()"  ui-sref-active="active"><a ui-sref="logout"><i class="fa fa-sign-out"></i> Logout</a></li>
-        </ul>
-        <div style="color:white; margin-top:18px; font-size:13px" ng-hide="isMailconfirmed() || !isLoggedIn()">Your email address is not confirmed. Confirm <a href="/confirm">here</a></div>
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+            <a class="navbar-brand" href="#">
+              <img src="../../../assets/images/rented-name-logo.png">
+              <span>A trusted network for off-campus housing</span>
+            </a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li ng-hide="!isLoggedIn()"> <img class="img-circle" ng-if="getCurrentUser().userImage" ng-src="/api/images{{getCurrentUser().userImage}}" style="height: 50px"/></li>
+            <li ng-hide="!isLoggedIn()"> <img class="img-circle" ng-if="!getCurrentUser().userImage" src="http://images.sodahead.com/polls/003831759/331109413_question_mark_face_answer_5_xlarge.jpeg" style="height: 50px"/></li>
+            <li ng-hide="isLoggedIn()" ui-sref-active="active"><a ui-sref="login" class="btn-rented-signin">Sign in</a></li>
+            <li ng-hide="isLoggedIn()" ui-sref-active="active"><a ui-sref="signup" class="btn-rented-signup">Sign up for free</a></li>
+            <li ng-show="isLoggedIn()"><p class="navbar-text">Hello <strong>{{getCurrentUser().firstname}}</strong></p></li>
+            <li ng-show="isLoggedIn()" ui-sref-active="active"><a ui-sref="settings"><i class="glyphicon glyphicon-cog"></i> Settings</a></li>
+            <li ng-show="isLoggedIn()"  ui-sref-active="active"><a ui-sref="logout"><i class="fa fa-sign-out"></i> Logout</a></li>
+          </ul>
+          <div style="color:white; margin-top:18px; font-size:13px" ng-hide="isMailconfirmed() || !isLoggedIn()">Your email address is not confirmed. Confirm <a href="/confirm">here</a></div>
+        </div>
       </div>
     </nav>
-
   </div>
