--- a/client/components/widgets/modal/modal.html
+++ b/client/components/widgets/modal/modal.html
@@ -1,11 +1,41 @@
-<div class="modal-header">
-  <button ng-if="modal.dismissable" type="button" ng-click="$dismiss()" class="close">&times;</button>
-  <h4 ng-if="modal.title" ng-bind="modal.title" class="modal-title"></h4>
+
+<div class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="{{modal.class}}">
+        <div class="modal-header" ng-show="modal.title">
+          <button type="button" class="close" ng-click="$hide()">&times;</button>
+          <h4 ng-if="modal.title" ng-bind="modal.title" class="modal-title"></h4>
+        </div>
+        <div class="modal-body">
+          <p ng-if="modal.text" ng-bind="modal.text"></p>
+          <p ng-if="modal.html" ng-bind="modal.html"></p>
+          <div ng-if="modal.contentHtml" ng-include="modal.contentHtml"></div>
+        </div>
+        <div class="modal-footer">
+        <!--<button type="button" class="btn btn-default" ng-click="$hide()">Close</button>-->
+          <button ng-repeat="button in modal.buttons" ng-class="button.classes" ng-click="button.click(modal)" ng-bind="button.text" class="btn"></button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-<div class="modal-body">
-  <p ng-if="modal.text" ng-bind="modal.text"></p>
-  <div ng-if="modal.html" ng-bind-html="modal.html"></div>
-</div>
-<div class="modal-footer">
-  <button ng-repeat="button in modal.buttons" ng-class="button.classes" ng-click="button.click($event)" ng-bind="button.text" class="btn"></button>
-</div>
+
+
+
+
+<!--<div class="app-modal-wrap" tabindex="-1" role="dialog">-->
+
+  <!--<div class="app-modal">-->
+
+    <!--<h2 ng-if="modal.title"><i ng-if="modal.icon" class="icon {{modal.icon}}"></i>{{modal.title}} <i class="icon icon-close modal_close float-right" ng-click="$hide()"></i></h2>-->
+
+    <!--<div class="app-modal-inner modal-body clearfix">-->
+      <!--<p ng-if="modal.text" ng-bind="modal.text"></p>-->
+      <!--<p ng-if="modal.html" ng-bind="modal.html"></p>-->
+      <!--<div ng-if="modal.contentHtml" ng-include="modal.contentHtml"></div>-->
+      <!--<button ng-hide="button.hidden" class="button button-blue float-right" ng-repeat="button in modal.buttons" ng-class="button.classes" ng-click="button.click(modal)" class="btn"><i ng-if="button.icon" class="icon icon-close"></i> {{button.text}}</button>-->
+    <!--</div>-->
+
+  <!--</div>-->
+<!--</div>-->
