--- a/client/components/layout/navbar/navbar.html
+++ b/client/components/layout/navbar/navbar.html
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <p style="color: white"><a class="navbar-brand" href="#"><img src="../../../assets/images/rented-name-logo.png" /></a>secure off-campus housing network</p>
+        <p style="color: white"><a class="navbar-brand" ng-href="/"><img src="../../../assets/images/rented-name-logo.png" /></a>secure off-campus housing network</p>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
