--- a/client/app/app.css
+++ b/client/app/app.css
@@ -161,7 +161,7 @@ footer {
   background: url(../assets/images/footer/bg-uci.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 400px;
+  min-height: 200px;
 }
 
 footer  a {
@@ -644,6 +644,7 @@ For mailchimp sign-up - not needed in main app
   footer .logo {
     text-align: center;
   }
+
 }
 
 @media (min-width: 992px) {
@@ -654,26 +655,26 @@ For mailchimp sign-up - not needed in main app
 
 @media only screen and (min-width : 992px) {
   h1{
-  font-size: 3.5em;
-  font-weight: 600;
-}
+    font-size: 3.5em;
+    font-weight: 600;
+  }
 
-/* ==========================================================================
-Custom style h1
-24px semi-bold
-========================================================================== */
-h2{
-  font-size: 2em;
-  font-weight: 600;
-}
+  /* ==========================================================================
+  Custom style h1
+  24px semi-bold
+  ========================================================================== */
+  h2{
+    font-size: 2em;
+    font-weight: 600;
+  }
 
-/* ==========================================================================
-Custom style h1
-18px semi-bold
-========================================================================== */
-h3{
-  font-size: 1.2em;
-}
+  /* ==========================================================================
+  Custom style h1
+  18px semi-bold
+  ========================================================================== */
+  h3{
+    font-size: 1.2em;
+  }
 
   .lead-msg {
     padding: 50px 100px;
@@ -682,4 +683,266 @@ h3{
     text-align: left;
     margin-bottom: 0px;
   }
+}
+
+@media (max-width: 768px) {
+
+  .my-profile {
+    display: none;
+  }
+
+  body nav.dashboard-submenu ul li {
+    width: 100%;
+    display: block;
+    text-align: left;
+  }
+
+  body .room:nth-of-type(n+2) {
+    margin-top: 20px;
+  }
+
+  body .looking-for-room .profile-info li {
+    width: 100%;
+    display: block;
+  }
+
+  body .looking-for-room .profile-info li:nth-child(2) {
+    border: none;
+  }
+
+}
+
+
+
+
+/* ==========================================================================
+Dashboard styles
+========================================================================== */
+
+
+/* Slider */
+.slider {
+  position: static;
+  margin: 0;
+  padding-bottom: 30px;
+}
+.slider .slick-prev, .slider .slick-next, .slider .slick-dots {
+  bottom: 15px;
+}
+.slider .slick-prev, .slider .slick-next {
+  left: 120px;
+  top: auto;
+}
+.slider .slick-prev:before, .slider .slick-next:before {
+  content: "";
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-image: url("../assets/images/icons/arrow.svg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.slider .slick-prev {
+  left: 20px;
+  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+}
+.slider .slick-dots {
+  width: auto;
+  left: 50px;
+}
+.slider .slick-dots li {
+  margin: 0;
+}
+.slider .slick-dots li.slick-active button:before {
+  color: #f7953d;
+  opacity: 1;
+}
+.slider .slick-dots li button:hover:before {
+  color: #f7953d;
+}
+.slider .slick-dots li button:before {
+  font-size: 10px;
+  color: #666666;
+}
+
+div.dashboard-wrapper {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  background: #e8e8e8;
+  display: block;
+  width: 100%;
+  min-height: 500px;
+}
+
+/* Dashboard Submenu */
+
+nav.dashboard-submenu {
+  background-color: #ffffff;
+  padding:0px;
+  margin:0px;
+  list-style:none;
+
+}
+
+nav.dashboard-submenu ul {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+}
+
+nav.dashboard-submenu ul li {
+  width: 2%;
+  display: table-cell;
+  padding: 6px 12px;
+  text-align: center;
+}
+
+nav.dashboard-submenu ul li a {
+  color: #000;
+}
+
+nav.dashboard-submenu ul li a.active {
+  font-weight: bold;
+}
+
+.white-box {
+  border-radius: 5px;
+  padding: 20px;
+  background: #fff;
+  box-shadow: 2px 2px 2px 0px #d3d3d3;
+  position: relative;
+}
+.media-body, .media-left, .media-right {
+  display: table-cell;
+  vertical-align: top;
+}
+.media-left, .media>.pull-left {
+  padding-right: 10px;
+}
+
+.white-box.looking-for-room {
+  padding-top: 40px;
+}
+
+
+/* Looking for a room */
+
+.looking-for-room img.profile-image{
+  height: 5em;
+  width: 5em;
+}
+.looking-for-room p.quote::before, .looking-for-room p.quote::after{
+  content: "\"";
+}
+
+.looking-for-room p.quote{
+  font-family: cursive;
+  line-height: 150%;
+  font-style: italic;
+}
+.looking-for-room h4.user-name{
+  color: #000000;
+  font-weight: bold;
+}
+.looking-for-room .media {
+  width: 100%;
+}
+
+.looking-for-room .media-body {
+  padding-left: 10px;
+}
+
+.looking-for-room .media:first-child {
+  margin-right:40px;
+}
+
+.looking-for-room .profile-info {
+  width: 100%;
+  background-color: #ffffff;
+  list-style:none;
+  display: table;
+  margin-top: 20px;
+  border-top: 1px solid #efefef;
+}
+.looking-for-room .profile-info li {
+  display: table-cell;
+  width: 30%;
+  white-space:nowrap;
+  padding:5px;  
+  text-align: center;
+}
+
+.looking-for-room .profile-info li:nth-child(2) {
+  border-left: 1px solid #efefef;
+  border-right: 1px solid #efefef;
+}
+
+
+/* Around you */
+
+.around-you .student {
+  margin: 20px 0;
+  text-align: center;
+}
+
+.around-you .student .profile-image{
+  width: 5em;
+  height: 5em;
+  margin: 0 auto
+}
+
+.around-you .student h3{
+  color: #000;
+  font-weight: bold;
+  margin-bottom: 0px;
+}
+
+/* Available Rooms */
+.available-rooms .room {
+  padding-top: 15px;
+  /*width: auto !important;*/
+}
+
+.available-rooms .room .picture {
+  border-radius: 3px;
+  width: 100%;
+  height: 100px;
+  overflow: hidden;
+}
+
+.available-rooms .room .picture img {
+  width: 100%;
+  position: relative;
+  top: -20px;
+}
+
+.available-rooms .room .info {
+  font-weight: bold;
+  display: inline-block;
+  width: 100%;
+  margin-top: 5px;
+}
+
+.available-rooms .room .info .value {
+  color: #000000;
+  font-weight: bold;
+  float: left;
+  border-bottom: 3px solid #f7953d;
+}
+
+.available-rooms .room .info .distance {
+  color: #000000;
+  float: right;
+}
+
+.available-rooms .room ul.specs {
+  display: block;
+  list-style:none;
+}
+
+.available-rooms .room ul.specs li {
+  margin-top: 5px;
 }
