Fix for height of media-box on looking-for-a-room section

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -853,6 +853,7 @@ nav.dashboard-submenu ul li a.active {
 
 .looking-for-room .media-body {
   padding-left: 10px;
+  height: 150px
 }
 
 .looking-for-room .media:first-child {
