--- a/client/app/app.css
+++ b/client/app/app.css
@@ -705,6 +705,40 @@ For mailchimp sign-up - not needed in main app
   body .looking-for-room .profile-info li:nth-child(2) {
     border: none;
   }
+  body .my-listings .list-item {
+    width: 100%;
+    text-align: center;
+  } 
+
+  body .my-listings .list-item .edit span{
+    display: block;
+    text-align: center;
+    width: 100%;
+    padding: 0px;
+  }
+
+  body .my-listings .list-item .edit .bubble{
+    width: 40px;
+    height: 40px;
+  }
+  
+  body .my-listings .list-item .edit {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    right: 0;
+    margin-top: 20px;
+  }
+
+  body .my-listings .list-item .info {
+    padding-top: 20px;
+    display: block;
+    width: 100%;
+  }
+
+  body .my-listings .list-item .info .value {
+    width: 100%;
+  }
 
 }
 
@@ -720,7 +754,7 @@ Dashboard styles
 .slider {
   position: static;
   margin: 0;
-  padding-bottom: 30px;
+  padding-bottom: 5px;
 }
 .slider .slick-prev, .slider .slick-next, .slider .slick-dots {
   bottom: 15px;
@@ -792,7 +826,7 @@ nav.dashboard-submenu ul {
 nav.dashboard-submenu ul a {
   width: 2%;
   display: table-cell;
-  padding: 6px 12px;
+  padding: 10px 12px;
   text-align: center;
 }
 
@@ -802,8 +836,11 @@ nav.dashboard-submenu ul a{
 }
 
 nav.dashboard-submenu ul a:hover {
-  border-bottom: 3px solid #f7953d;
+  background: #f7953d;
   text-decoration: none;
+}
+nav.dashboard-submenu ul a:hover li{
+  color: #fff;
 }
 
 nav.dashboard-submenu ul a.active li {
@@ -829,7 +866,7 @@ nav.dashboard-submenu > label {
   user-select: none;
 }
 @media (max-width: 992px) {
-  .my-profile {
+  .my-profile .profile-sidebar{
     display: none;
   }
 }
@@ -912,7 +949,8 @@ nav.dashboard-submenu > label {
 }
 
 .looking-for-room p.quote{
-  font-family: cursive;
+  font-family: "Proxima Nova";
+  text-align: justify;
   line-height: 150%;
   font-style: italic;
 }
@@ -1256,7 +1294,91 @@ h2.section-title:nth-child(n+2) {
   background-color: #56bfc3;
 }
 
-.secondary:hover{
+.secondary:hover, .primary:hover{
   background-color: #efefef;
 }
 
+.my-profile .buttons-box {
+  margin-bottom: 20px;
+}
+
+.my-profile .buttons-box a:first-child {
+  margin-bottom: 20px;
+}
+
+/* My Listings */
+
+.my-listings .list-item .picture{
+  border-radius: 3px;
+  width: 100%;
+  height: 80px;
+  overflow: hidden;
+}
+.my-listings .list-item .picture img{
+  width: 100%;
+  position: relative;
+  top: -20px;
+}
+
+.my-listings .list-item .info span{
+  display: block;
+  color: #000;
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+.my-listings .list-item .info .value{
+  font-size: 1.3em;
+  width: 80px;
+  padding-bottom: 3px;
+  border-bottom: 2px solid #f7953d;
+  margin-bottom: 5px;
+}
+
+.my-listings .list-item .info .address{
+  font-size: 1.1em;
+}
+
+.my-listings .list-item .info .elapsed-time{
+  font-size: .9em;
+  color: #ccc;
+}
+
+.my-listings .list-item .edit {
+  width: 100px;
+  position: absolute;
+  top: 0;
+  right: 15px;
+  display: table;
+}
+
+.my-listings .list-item .edit a, .my-listings .list-item .edit span {
+  display: table-cell;
+  vertical-align: middle;
+}
+.my-listings .list-item .edit span {
+  padding-right: 10px;
+  font-weight: bold;
+  color: #f7953d;
+}
+
+.my-listings .list-item span.text{
+  display: inline-block;
+}
+.my-listings .list-item a.bubble{
+  display: inline-block;
+  position: relative;
+  background: #f7953d;
+  border-radius: 50%;
+  width: 2em;
+  height: 2em; 
+}
+
+.my-listings .list-item .bubble i{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  color: #fff;
+
+}
