--- a/client/app/account/login/login.css
+++ b/client/app/account/login/login.css
@@ -117,6 +117,9 @@ label + label {
 .main {
   min-height: 100%;
   position: relative;
+  background: url(../../../assets/images/jumbotron/bg-ucsdC.jpg);
+  background-size: cover;
+  padding-bottom: 50px;
 }
 
 .main-form {
@@ -192,11 +195,22 @@ label + label {
 }
 
 .login-header {
-  background-image: url("../../../assets/images/jumbotron/bg-ucsdA.jpg");
+  background: #55a5b2;
+  background: -moz-linear-gradient(top,  #55a5b2 0%, #119bad 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#55a5b2), color-stop(100%,#119bad));
+  background: -webkit-linear-gradient(top,  #55a5b2 0%,#119bad 100%);
+  background: -o-linear-gradient(top,  #55a5b2 0%,#119bad 100%);
+  background: -ms-linear-gradient(top,  #55a5b2 0%,#119bad 100%);
+  background: linear-gradient(to bottom,  #55a5b2 0%,#119bad 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#55a5b2', endColorstr='#119bad',GradientType=0 );
+
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   padding: 15px 0;
+}
+.login-header.transparent {
+  background: transparent;
 }
 .login-header .container {
   display: table;
@@ -226,10 +240,10 @@ label + label {
 }
 
 .login-box {
-  max-width: 400px;
+  max-width: 550px;
   width: 100%;
-  margin: 50px auto;
-  padding: 15px;
+  margin: 50px auto 0px auto;
+  padding: 30px 50px !important;
 }
 .login-box .social {
   margin-top: 30px;
