--- a/client/components/layout/navbar/navbar.css
+++ b/client/components/layout/navbar/navbar.css
@@ -1,30 +1,30 @@
-.navbar {
+header.navbar {
   background: #5e99a1;
 }
-.navbar-brand {
+header.navbar-brand {
   padding-top: 10px;
   color: #fff;
   font-size: 1em;
 }
-.navbar-brand img, span{
+header.navbar-brand img, span{
   /*width: 78px;*/
   position: relative;
   display: inline-block;
   bottom: 0;
 }
 
-.navbar-brand span {
+header.navbar-brand span {
   line-height: 200%;
   bottom: -8px;
 }
 
-.navbar-nav {
+header.navbar-nav {
   margin-top: 5px;
 }
 
-.navbar-wrapper .navbar {
+header.navbar-wrapper .navbar {
   border-radius: 0px;
 }
-.picture{
+header.picture{
   background-image: url(./../../../assets/images/jumbotron/nav.jpg);
 }
